# sd-jwt-payload

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/actions/publish/publish-rust/: action.yml
.github/actions/rust/rust-setup/: action.yml
.github/workflows/: audit.yml  build-and-test.yml  build-windows.yml  clippy.yml  format.yml  rust-publish-to-crates-io.yml
examples/: sd_jwt.rs
src/: api_test.rs  builder.rs  decoder.rs  disclosure.rs  encoder.rs  error.rs  hasher.rs  jwt.rs  key_binding_jwt_claims.rs  lib.rs  sd_jwt.rs  signer.rs  utils.rs
tests/: api_test.rs
